data/derived/comb/progs/unify/prog1137.ml.out
Characters 63-71:
  wwhile((let helper x = (f b, b=(f b)) in helper b), b);;
                                           ^^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
